--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,13 +13,18 @@ jobs:
       - restore_cache:
           keys:
             - dotnet-packages-v1-{{ checksum "person-service/person-service.csproj" }}
+            - dotnet-packages-v1-{{ checksum "insurance-service/insurance-service.csproj" }}
       - run:
           name: "Install project dependencies"
-          command: dotnet.exe restore person-service
+          command: dotnet.exe restore
       - save_cache:
           paths:
             - C:\Users\circleci\.nuget\packages
           key: dotnet-packages-v1-{{ checksum "person-service/person-service.csproj" }}
+      - save_cache:
+          paths:
+            - C:\Users\circleci\.nuget\packages
+          key: dotnet-packages-v1-{{ checksum "insurance-service/insurance-service.csproj" }}
       - run:
           name: "Run Application Tests"
           command: dotnet.exe test -v n --results-directory:test_coverage --collect:"Code Coverage" person-service
