--- a/person-service/person-service.csproj
+++ b/person-service/person-service.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
-        <RootNamespace>web_api_example</RootNamespace>
+        <RootNamespace>person-service</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
