--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,28 @@ person-service/obj/Debug/net7.0/refint/person-service.dll
 person-service/obj/Debug/net7.0/staticwebassets/msbuild.build.person-service.props
 person-service/obj/Debug/net7.0/staticwebassets/msbuild.buildMultiTargeting.person-service.props
 person-service/obj/Debug/net7.0/staticwebassets/msbuild.buildTransitive.person-service.props
+person-service/bin/Debug/net7.0/app.dll
+person-service/bin/Debug/net7.0/app.deps.json
+person-service/bin/Debug/net7.0/app.pdb
+person-service/bin/Debug/net7.0/app.runtimeconfig.json
+person-service/obj/app.csproj.nuget.dgspec.json
+person-service/obj/app.csproj.nuget.g.props
+person-service/obj/app.csproj.nuget.g.targets
+person-service/obj/Debug/net7.0/app.AssemblyInfo.cs
+person-service/obj/Debug/net7.0/app.AssemblyInfoInputs.cache
+person-service/obj/Debug/net7.0/app.assets.cache
+person-service/obj/Debug/net7.0/app.csproj.AssemblyReference.cache
+person-service/obj/Debug/net7.0/app.csproj.CoreCompileInputs.cache
+person-service/obj/Debug/net7.0/app.csproj.FileListAbsolute.txt
+person-service/obj/Debug/net7.0/app.dll
+person-service/obj/Debug/net7.0/app.GeneratedMSBuildEditorConfig.editorconfig
+person-service/obj/Debug/net7.0/app.genruntimeconfig.cache
+person-service/obj/Debug/net7.0/app.MvcApplicationPartsAssemblyInfo.cache
+person-service/obj/Debug/net7.0/app.MvcApplicationPartsAssemblyInfo.cs
+person-service/obj/Debug/net7.0/app.pdb
+person-service/obj/Debug/net7.0/ref/app.dll
+person-service/obj/Debug/net7.0/refint/app.dll
+person-service/obj/Debug/net7.0/staticwebassets/msbuild.build.app.props
+person-service/obj/Debug/net7.0/staticwebassets/msbuild.buildMultiTargeting.app.props
+person-service/obj/Debug/net7.0/staticwebassets/msbuild.buildTransitive.app.props
+person-service/bin/Debug/net7.0/app
