--- a/person-service/appsettings.json
+++ b/person-service/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PersonsDatabase": "Host=localhost;Database=sampledb;Username=dotnet;Password=dotnet123"
+  },  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
