--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,9 @@ person-service/obj/Debug/net7.0/staticwebassets/msbuild.build.app.props
 person-service/obj/Debug/net7.0/staticwebassets/msbuild.buildMultiTargeting.app.props
 person-service/obj/Debug/net7.0/staticwebassets/msbuild.buildTransitive.app.props
 person-service/bin/Debug/net7.0/app
+person-service/bin/Debug/net7.0/Microsoft.EntityFrameworkCore.Abstractions.dll
+person-service/bin/Debug/net7.0/Microsoft.EntityFrameworkCore.dll
+person-service/bin/Debug/net7.0/Npgsql.dll
+person-service/bin/Debug/net7.0/Microsoft.EntityFrameworkCore.Relational.dll
+person-service/bin/Debug/net7.0/Npgsql.EntityFrameworkCore.PostgreSQL.dll
+person-service/obj/Debug/net7.0/app.csproj.CopyComplete
