AI suggestions for framework update

--- a/insurance-service/appsettings.json
+++ b/insurance-service/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "InsurancesDatabase": "Host=${DB_HOST};Database=insurancedb;Username=${DB_USER};Password=${DB_PASS}"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
