--- a/person-service/appsettings.json
+++ b/person-service/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PersonsDatabase": "Host=localhost;Database=sampledb;Username=dotnet;Password=dotnet123"
+    "PersonsDatabase": "Host=${DB_HOST};Database=persondb;Username=${DB_USER};Password=${DB_PASS}"
   },  
   "Logging": {
     "LogLevel": {
