improve azure pipeline #8

--- a/person-service/azure-pipelines.yml
+++ b/person-service/azure-pipelines.yml
@@ -6,13 +6,6 @@ trigger:
     include:
     - person-service/*
 
-resources:
-  repositories:
-    - repository: gitops
-      type: git
-      name: pminkows/gitops
-      ref: main
-
 variables:
   solution: 'person-service/person-service.csproj'
   buildConfiguration: 'Release'
@@ -35,8 +28,7 @@ stages:
   jobs:
   - job: BuildAndTest
     steps:
-    - checkout: self
-      path: s/app
+#    - checkout: self
 
     - task: UseDotNet@2
       inputs:
@@ -51,7 +43,6 @@ stages:
     - task: CmdLine@2
       inputs:
         script: |
-          cd web-api-example
           ls -la
           pwd
 
@@ -64,7 +55,6 @@ stages:
           $version = $xml.Project.PropertyGroup.Version
           Write-Host "##vso[task.setvariable variable=projectVersion]$version"
           Write-Host "Project version: $version"
-      workingDirectory: $(Pipeline.Workspace)/s/app
 
     - task: NuGetCommand@2
       displayName: 'NuGet restore'
@@ -72,7 +62,6 @@ stages:
         command: 'restore'
         restoreSolution: '$(solution)'
         feedsToUse: 'select'
-      workingDirectory: $(Pipeline.Workspace)/s/app
 
     - task: SonarCloudPrepare@3
       inputs:
@@ -84,7 +73,6 @@ stages:
         extraProperties: |
           sonar.cs.opencover.reportsPaths=$(Build.SourcesDirectory)/**/coverage.opencover.xml
           sonar.cs.vstest.reportsPaths=$(Agent.TempDirectory)/*.trx
-      workingDirectory: $(Pipeline.Workspace)/s/app
 
     - task: VSBuild@1
       displayName: 'Build solution'
@@ -92,7 +80,6 @@ stages:
         solution: '$(solution)'
         configuration: '$(buildConfiguration)'
         msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true'
-      workingDirectory: $(Pipeline.Workspace)/s/app
 
     - task: VSTest@2
       displayName: 'Run Tests'
@@ -102,7 +89,7 @@ stages:
           **\*tests.dll
           !**\*TestAdapter.dll
           !**\obj\**
-        searchFolder: '$(Pipeline.Workspace)/s/app'
+        searchFolder: '$(System.DefaultWorkingDirectory)'
         codeCoverageEnabled: true
         testRunTitle: 'Person Service Tests'
         platform: '$(buildPlatform)'
@@ -114,7 +101,7 @@ stages:
       displayName: 'Publish Code Coverage'
       inputs:
         codeCoverageTool: 'Cobertura'
-        summaryFileLocation: '$(Pipeline.Workspace)/s/app/**/coverage.cobertura.xml'
+        summaryFileLocation: '$(Build.SourcesDirectory)/**/coverage.cobertura.xml'
         failIfCoverageEmpty: true
 
     - task: SonarCloudAnalyze@3
@@ -134,7 +121,6 @@ stages:
         packDestination: '$(Build.ArtifactStagingDirectory)'
         versioningScheme: 'byEnvVar'
         versionEnvVar: 'projectVersion'
-      workingDirectory: $(Pipeline.Workspace)/s/app
 
     - task: PublishBuildArtifacts@1
       displayName: 'Publish Build Artifacts'
@@ -144,22 +130,19 @@ stages:
         publishLocation: 'Container'
 
 - stage: BuildImage
-  dependsOn: BUILD
+  dependsOn: Build
   condition: succeeded()
   variables:
     imageTag: '$(projectVersion)'
   jobs:
   - job: BuildOnOpenShift
     steps:
-    - checkout: self
-      path: s/app
-
     - task: oc-cmd@3
       displayName: 'Login to OpenShift'
       inputs:
         cmd: 'login'
-        serverUrl: '$(ocpClusterUrl)'
-        token: '$(ocpToken)'
+#        serverUrl: '$(ocpClusterUrl)'
+#        token: '$(ocpToken)'
         connectionType: 'OpenShift Connection Service'
         openshiftService: 'piomin-ocp'
         version: '4.17'
@@ -235,24 +218,22 @@ stages:
   jobs:
   - job: CommitNewTag
     steps:
-    - checkout: gitops
-      path: s/gitops
-      persistCredentials: true
-      fetchDepth: 0
-
-    - task: CmdLine@2
-      inputs:
-        script: |
-          git config --global user.email "piotr.minkowski@gmail.com"
-          git config --global user.name "Piotr Minkowski"
-          cd s/gitops
-          git checkout main
-          yq e '.image.tag = "$(imageTag)"' -i apps/person-service/test/values.yaml
-          cat apps/person-service/test/values.yaml
-          git add apps/person-service/test/values.yaml
-          git commit -m "$(imageTag)"
-          git remote -v
-          git push https://$(System.AccessToken)@dev.azure.com/pminkows/pminkows/_git/gitops main
+      - checkout: git://gitops
+        persistCredentials: true
+        fetchDepth: 0
+      - task: CmdLine@2
+        inputs:
+          script: |
+            git config --global user.email "piotr.minkowski@gmail.com"
+            git config --global user.name "Piotr Minkowski"
+            cd gitops
+            git checkout main
+            yq e '.image.tag = "$(imageTag)"' -i apps/person-service/test/values.yaml
+            cat apps/person-service/test/values.yaml
+            git add apps/person-service/test/values.yaml
+            git commit -m "$(imageTag)"
+            git remote -v
+            git push https://$(System.AccessToken)@dev.azure.com/pminkows/pminkows/_git/gitops main
         displayName: List catalog
         env:
           SYSTEM_ACCESSTOKEN: $(System.AccessToken)
@@ -275,7 +256,7 @@ stages:
                   script: |
                     git config --global user.email "piotr.minkowski@gmail.com"
                     git config --global user.name "Piotr Minkowski"
-                    cd s/gitops
+                    cd gitops
                     git checkout main
                     yq e '.image.tag = "$(imageTag)"' -i apps/person-service/prod/values.yaml
                     cat apps/person-service/prod/values.yaml
