--- a/person-service/azure-pipelines.yml
+++ b/person-service/azure-pipelines.yml
@@ -96,6 +96,13 @@ stages:
 #      inputs:
 #        pollingTimeoutSec: '300'
 
+    - task: DotNetCoreCLI@2
+      displayName: 'Build'
+      inputs:
+        command: 'build'
+        projects: '$(solution)'
+        arguments: '--configuration $(buildConfiguration)'
+
     - task: NuGetCommand@2
       displayName: 'NuGet pack'
       inputs:
