--- a/person-service/azure-pipelines.yml
+++ b/person-service/azure-pipelines.yml
@@ -103,15 +103,15 @@ stages:
         projects: '$(solution)'
         arguments: '--configuration $(buildConfiguration)'
 
-    - task: NuGetCommand@2
-      displayName: 'NuGet pack'
+    - task: DotNetCoreCLI@2
+      displayName: 'Pack'
       inputs:
         command: 'pack'
         packagesToPack: '$(solution)'
-        configuration: '$(buildConfiguration)'
-        packDestination: '$(Build.ArtifactStagingDirectory)'
+        packDirectory: '$(Build.ArtifactStagingDirectory)'
         versioningScheme: 'byEnvVar'
         versionEnvVar: 'projectVersion'
+        configuration: '$(buildConfiguration)'
 
     - task: PublishBuildArtifacts@1
       displayName: 'Publish Build Artifacts'
