--- a/person-service/person-service.csproj
+++ b/person-service/person-service.csproj
@@ -4,6 +4,11 @@
         <TargetFramework>net9.0</TargetFramework>
         <RootNamespace>person-service</RootNamespace>
         <Version>1.0.0</Version>
+        <IsPackable>true</IsPackable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageId>person-service</PackageId>
+        <Authors>piomin</Authors>
+        <Description>Person Service API</Description>
     </PropertyGroup>
 
     <ItemGroup>
