improve azure pipeline #19

--- a/person-service/azure-pipelines.yml
+++ b/person-service/azure-pipelines.yml
@@ -131,12 +131,13 @@ stages:
     steps:
 
       - task: CmdLine@2
-        script: |
-          echo "Installing OpenShift CLI (oc)..."
-          curl -LO "https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/linux/oc.tar.gz"
-          tar -xzf oc.tar.gz
-          sudo mv oc /usr/local/bin/
-          oc version
+        inputs:
+          script: |
+            echo "Installing OpenShift CLI (oc)..."
+            curl -LO "https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/linux/oc.tar.gz"
+            tar -xzf oc.tar.gz
+            sudo mv oc /usr/local/bin/
+            oc version
         displayName: 'Install OpenShift CLI'
 
       - task: CmdLine@2
